# solana-client-in-rust

./: .gitignore  Cargo.toml  README.md
src/: lib.rs  main.rs
