[package]
name = "client-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
solana-sdk = "1.8.1"
solana-cli = "1.8.1"
solana-cli-config = "1.8.1"
solana-client = "1.8.1"
borsh = "0.9.1"
json = "0.12.4"
bincode = "1.3.3"